--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,78 @@
-rm(list=ls())
-#install.packages("slam")
-library(dplyr)
+#
+# Run the application by clicking the 'Run App' button above.
+# 
+#
+
+
+library(shiny)
+library(readxl)
 library(magrittr)
-library(tidyr)
 library(stringr)
-library(tm)
-library(slam)
 
-rec <- read_excel(" ", sheet=" ")
-f500 <-read.csv(" ")
-#names(f500)
+# Define UI for application- #COMPLETE DATA, #FILTER DATA
+ui <- navbarPage(
+  "Filtering Tool",
+  
+  tabPanel("Complete Data",
+  fluidPage(
+   # Sidebar with a slider input for 1st page(# Sidebar layout with input and output definitions)
+   sidebarLayout(
+     # Sidebar panel for inputs 
+      sidebarPanel(
+        fileInput("file", label = h3("Choose your file"))
+        ),
+      # Main panel for displaying outputs
+      mainPanel(
+        tabsetPanel(type = "tabs",
+                    tabPanel("Complete Data",fluidRow(column(4, uiOutput("sheet_names"))),
+                                             fluidRow(column(4, tableOutput("value"))))
+        )
+      )
+   )
+)),
+  tabPanel("Filter Data",
+           fluidPage(
+             sidebarLayout(
+               sidebarPanel(
+                 fluidRow(column(12,textInput("text", label = h3("Filter Position"), value = "Enter text..."))
+             ),
+             fluidRow(column(12,textInput("text1", label = h3("Filter Company"), value = "Enter text..."))
+             )
+             ),
+             mainPanel(
+               tableOutput("filter")
+             )
+           ))
+  )
+)
 
-#rec= rec[,c(1,2,4,5)]
-colnames(rec)=c("Fname","Lname","Company","Position")
+# Define server logic
+server <- function(input, output) {
+  output$sheet_names <- renderUI({validate(
+    need(input$file != "", "Please select a data set")
+  )
+    name <- input$file
+    selectInput("sheets","Sheet Name",excel_sheets(name$datapath))
+  })
+  
+  output$value <- renderTable({validate(
+    need(input$file != "", "Please select a data set")
+  )
+    name <- input$file
+    read_xlsx(name$datapath,sheet = input$sheets)
+  })
 
-rec <- mutate_each(rec,funs(toupper))%>%
-  unite("Name",Fname,Lname,sep = " ")
+  output$filter <- renderTable({validate(
+    need(input$file != "", "Please select a data set")
+  )
+    name <- input$file
+    rec <- as.data.frame(read_xlsx(name$datapath,sheet = input$sheets))
+    rec1 <- rec[str_detect(rec$Position,input$text),]
+    rec1[str_detect(rec1$Company,input$text1),]
+  })
 
-f500 <- mutate_each(f500,funs(toupper))
-#colnames(rec)
-
-#company_filter 
-rec1= rec[rec$Company %in% f500$Company,]
-#rec= rec[!rec$Position %in% pos$ï..Position,]
-
-
-selected_list <- setNames(data.frame(matrix(ncol = 3)), c("Name", "Company", "Position"))
-want_more = "YES"
-
-while(want_more == "YES"){
-  pos = readline(prompt = "Enter the position:")
-  for(i in range(length(rec))){
-    df = rec[str_detect(rec$Position,pos),]
-  }
-  selected_list <- rbind(selected_list,df)
-  rec= rec[!rec$Position  %in% selected_list$Position,]
-  want_more = readline(prompt = "Want to Filter Again:")
 }
 
-newdata <- selected_list[order(selected_list$Name),]
+# Run the application 
+shinyApp(ui = ui, server = server)
+
